Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2665

BlockManagerStressTest.StressTest is extremely flaky

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • 1.9.0
    • 1.9.0
    • fs
    • None

    Description

      After some recent block manager changes the Block Manager Stress Test is about 50% flaky on certain precommit builds. The failure looks like this:

      /data/somelongdirectorytoavoidrpathissues/src/kudu/src/kudu/fs/block_manager-stress-test.cc:518: Failure
      Failed
      Bad status: Not found: /data/somelongdirectorytoavoidrpathissues/src/kudutest/block_manager-stress-test.0.BlockManagerStressTest_1.StressTest.1547778831841692-23619/data/e8ab31ef3e2143a5bc6d7a2b40e7805b.data: No such file or directory (error 2)
      /data/somelongdirectorytoavoidrpathissues/src/kudu/src/kudu/fs/block_manager-stress-test.cc:549: Failure
      Expected: this->InjectNonFatalInconsistencies() doesn't generate new fatal failures in the current thread.
       Actual: it does.
      

      Attachments

        1. block_manager-stress-test.txt.gz
          3.58 MB
          Adar Dembo

        Activity

          People

            helifu LiFu He
            mpercy Mike Percy
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: